# koder-linux

./: .gitignore  build.sh
auto/: config
config/hooks/live/: 0050-third-party.hook.chroot  0060-koder-native.hook.chroot  0100-branding.hook.chroot
config/includes.chroot/etc/default/: console-setup  keyboard
config/includes.chroot/etc/live/config.conf.d/: koder.conf
config/includes.chroot/etc/sudoers.d/: koder-nopasswd
config/includes.chroot/etc/systemd/system/: ocean-blue-tty.service
config/includes.chroot/etc/vim/: vimrc.local
config/includes.chroot/etc/xdg/autostart/: org.gnome.Tour.desktop
config/includes.chroot/lib/live/config/: 9999-koder-avatar
config/includes.chroot/opt/koder-native/: koder
config/includes.chroot/tmp/koder-native-src/data/: com.koder.kterm.metainfo.xml.in
config/includes.chroot/tmp/koder-native-src/po/: POTFILES.in
config/includes.chroot/tmp/koder-native-src/src/: kterm-browser.h  kterm-explorer.c  kterm-explorer.h  kterm-terminal.c  kterm-terminal.h  kterm-window.c
config/includes.chroot/usr/share/applications/: com.koder.native.desktop  koder-linux-installer-gui.desktop
config/includes.chroot/usr/src/koder-native/: meson.build
config/includes.chroot/usr/src/koder-native/data/: com.koder.kterm.desktop.in
config/includes.chroot/usr/src/koder-native/po/: meson.build  pt_BR.po
config/includes.chroot/usr/src/koder-native/src/: kterm-application.c  kterm-application.h  kterm-browser.c  kterm-preferences.c  kterm-preferences.h  kterm-settings.c  kterm-settings.h  kterm-window.h  main.c
config/package-lists/: koder.list.chroot
(+8 files in other folders)
